finish project add functionality to the buttons, displays and operators

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
         <header></header>
         <main id="calculator" class="calculator">
             <div class="display">
-                <div class="operation">
-                    <p> 54+89-21</p>
+                <div class="previousDisplay">
                 </div>
-                <div class="input">
-                    <p>0651546541651+9516516418656</p>
+                <div class="currentDisplay">
                 </div>
             </div>
             <div id="dltClrBtns" class="dltClrBtns">
@@ -23,22 +21,22 @@
                 <button class="delete" id="delete">DELETE</button>                
             </div>
             <div id="oprBtns" class="oprBtns">
-                <button class="oprBtn" onclick="input+=7">7</button>
-                <button class="oprBtn" onclick="input+=8">8</button>
-                <button class="oprBtn" onclick="input+=9">9</button>
-                <button class="oprBtn" onclick="input+='/'">/</button>
-                <button class="oprBtn" onclick="input+=4">4</button>
-                <button class="oprBtn" onclick="input+=5">5</button>
-                <button class="oprBtn" onclick="input+=6">6</button>
-                <button class="oprBtn" onclick="input+='x'">x</button>
-                <button class="oprBtn" onclick="input+=1">1</button>
-                <button class="oprBtn" onclick="input+=2">2</button>
-                <button class="oprBtn" onclick="input+=3">3</button>
-                <button class="oprBtn" onclick="input+='-'">-</button>
-                <button class="oprBtn" onclick="input+='.'">.</button>
-                <button class="oprBtn" onclick="input+=0">0</button>
-                <button class="oprBtn" onclick="input+='='">=</button>
-                <button class="oprBtn" onclick="input+='+'">+</button>
+                <button class="numBtn">7</button>
+                <button class="numBtn">8</button>
+                <button class="numBtn">9</button>
+                <button class="oprBtn">/</button>
+                <button class="numBtn">4</button>
+                <button class="numBtn">5</button>
+                <button class="numBtn">6</button>
+                <button class="oprBtn">x</button>
+                <button class="numBtn">1</button>
+                <button class="numBtn">2</button>
+                <button class="numBtn">3</button>
+                <button class="oprBtn">-</button>
+                <button class="decBtn">.</button>
+                <button class="numBtn">0</button>
+                <button class="equalBtn">=</button>
+                <button class="oprBtn">+</button>
             </div>
         </main>
     </body>
